tests/negative/comptime/untagged_sum_type_default.orng
// error: expected a value of type `untagged_sum_type`, got a value of type `?Int`
// 
const x : @Untagged ( ? Int ) 
